<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount_number"
        android:inputType="number" />

    <Button
        android:id="@+id/btnGetUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_url" />

    <EditText
        android:id="@+id/edtUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:hint="@string/url_hint"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnOpenBrowser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/open_browser" />

</LinearLayout>