<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Spinner
        android:id="@+id/spVendor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/vendors" />

    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount_number"
        android:inputType="number" />

    <Button
        android:id="@+id/btnGetSyntax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_syntax" />

    <EditText
        android:id="@+id/edtSyntax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:hint="@string/syntax_hint"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnSendSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/send_sms" />

</LinearLayout>