<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Spinner
        android:id="@+id/spVendor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/vendors" />

    <EditText
        android:id="@+id/edtSerial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/serial"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtCodePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/code_pin"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/charge" />

</LinearLayout>